src/Components/App/App.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 62.5%;
}

.App {
  background-color: #FAF6E9;
  color: #FAF6E9;
  height: 100vh;
  width: 100vw;
  display: grid;
  grid-template: 72px 15vh auto 144px / 1fr;
  align-items: center;
  justify-items: center;
  font-family: 'Roboto', sans-serif;
  transition: .5s ease-in;
}

.warm {
  /* background-image: linear-gradient(to top, #ff5858 0%, #f09819 100%); */
  background-color: #FFBB5C;
}

.cold {
  /* background-image: linear-gradient(to top, #a1c4fd 0%, #c2e9fb 100%); */
  background-color: #765aff;
}

.App .header {
  display: flex;
  background-color: #2F2E2B;
  height: 72px;
  width: 100vw;
  justify-content: center;
  align-items: center;
  grid-row: 1/2;
}

.App .header .header-logo {
  color: #FAF6E9;
  font-family: 'Poppins', sans-serif;
  font-size: 3.6rem;
  font-weight: 700;
  letter-spacing: 0.08em;
}

.App .search-box {
  grid-row: 2/3;
  grid-column: 1/3;
}

.App .search-box input {
  border: 0;
  outline: 0;
  font-size: 1.6rem;
  height: 3.2rem;
  width: 280px;
  border-radius: 4px;
  padding-left: 1rem;
  background-color: rgba( 47, 46, 43, 0.25 );
  color: #FAF6E9;
}

.App .search-box ::-webkit-input-placeholder{
  color: #FAF6E9;
  font-family: 'Roboto', sans-serif;
  font-size: 1.6rem;
  font-weight: 300;
}

.App .search-box ::-moz-placeholder{
  color: #FAF6E9;
  font-family: 'Roboto', sans-serif;
  font-size: 1.6rem;
  font-weight: 300;
}

.App .search-box ::placeholder{
  color: #FAF6E9;
  font-family: 'Roboto', sans-serif;
  font-size: 1.6rem;
  font-weight: 300;
}

.App .results-box {
  height: 100%;
  width: 100%;
  grid-row: 3/4;
  display: grid;
  grid-template: 1fr / repeat(3, 1fr);
  align-items: center;
  justify-items: center;
}

.App .results-box .location-box{
  justify-self: end;
  min-width: 280px;
  width: 60%;
  max-width: 320px;
  height: 272px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  grid-column: 1/2;
  background: rgba( 255, 255, 255, 0.25 );
  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
  backdrop-filter: blur( 4px );
  -webkit-backdrop-filter: blur( 4px );
  border-radius: 8px;
  color: #2F2E2B; 
}

.App .results-box .location-box .date {
  font-size: 1.6rem;
  line-height: 2rem;
  font-weight: 300;
}

.App .results-box .location-box .location {
  font-size: 2.4rem;
  line-height: 2.9rem;
  font-weight: 700;
}

.App .results-box .temp-box{
  min-width: 280px;
  width: 60%;
  max-width: 320px;
  height: 272px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  grid-column: 2/3;
  background: rgba( 255, 255, 255, 0.25 );
  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
  backdrop-filter: blur( 4px );
  -webkit-backdrop-filter: blur( 4px );
  border-radius: 8px;
  color: #2F2E2B;
}

.App .results-box .temp-box .temp-subtitle {
  font-size: 1.6rem;
  line-height: 2rem;
  font-weight: 300;
}

.App .results-box .temp-box .temp{
  font-size: 3.2rem;
  line-height: 3.8rem;
  font-weight: 700;
}

.App .results-box .temp-box .feels-like {
  font-size: 1.6rem;
  line-height: 2rem;
  font-weight: 300;
}

.App .results-box .weather-box{
  justify-self: start;
  min-width: 280px;
  width: 60%;
  max-width: 320px;
  height: 272px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  grid-column: 3/4;
  background: rgba( 255, 255, 255, 0.25 );
  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
  backdrop-filter: blur( 4px );
  -webkit-backdrop-filter: blur( 4px );
  border-radius: 8px;
  font-size: 2.6rem;
  line-height: 3.2rem;
  font-weight: 500;
  color: #2F2E2B;
}

.App .results-box .weather-box .weather {
  font-size: 1.6rem;
  line-height: 2rem;
  font-weight: 300;
  margin-bottom: 8px;
}

.App .footer {
  display: grid;
  grid-template: 1fr / repeat(3, 1fr);
  background-color: #2F2E2B;
  height: 144px;
  width: 100vw;
  grid-row: 4/5;
}

.App .footer .openweather-logo{ 
  display: flex;
  justify-content: center;
  align-items: center;
  background-image: url('../../assets/images/openweather-logo.png');
  background-position: center;
  background-repeat: no-repeat;
  grid-column: 1/2;
  transition: .5s ease-in;
}

.App .footer .author{
  display: flex;
  justify-content: center;
  align-items: center;
  grid-column: 2/3;
  font-size: 1.6rem;
  line-height: 2rem;
  font-weight: 300;
}

.App .footer .social-media{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  grid-column: 3/4;
  font-size: 1.6rem;
  font-weight: 300;
}

.App .footer .social-media ul{
  list-style-type: none;
}

.App .footer .social-media li{
  margin-bottom: 4px;
}

.App .footer .social-media a{
  text-decoration: none;
  color: inherit;
}

.App .footer .social-media .linkedin span{
  display: inline-block;
  margin-right: 8px;
  width: 12px;
  height: 12px;
  background-image: url('../../assets/logos/linkedin-logo.svg');
  background-position: center;
  background-repeat: no-repeat;
  backface-visibility: visible;
}

.App .footer .social-media .github span{
  display: inline-block;
  margin-right: 8px;
  width: 12px;
  height: 12px;
  background-image: url('../../assets/logos/github-logo.svg');
  background-position: center;
  background-repeat: no-repeat;
  backface-visibility: visible;
}

.App .footer .social-media .twitter span{
  display: inline-block;
  margin-right: 8px;
  width: 12px;
  height: 12px;
  background-image: url('../../assets/logos/twitter-logo.svg');
  background-position: center;
  background-repeat: no-repeat;
  backface-visibility: visible;
}

@media only screen and (max-width: 1020px) {
  .App {
    min-height: 100vh;
    height: auto;
    grid-template: 72px 15vh auto 224px / 1fr;
  }

  .App .results-box {
    grid-template: repeat(3, 1fr) / 1fr;
    row-gap: 32px;
  }

  .App .results-box .location-box{
    justify-self: center;
    grid-row: 1/2;
    grid-column: 1/2;
  }

  .App .results-box .temp-box{
    grid-row: 2/3;
    grid-column: 1/2;
  }

  .App .results-box .weather-box{
    justify-self: center;
    grid-row: 3/4;
    grid-column: 1/2;
    margin-bottom: 48px;
  }

  .App .footer {
    grid-template: repeat(2, 1fr) / repeat(2, 1fr);
    height: 224px;
  }

  .App .footer .openweather-logo{ 
    background-image: url('../../assets/images/openweather-logo-mobile.png');
    grid-column: 1/2;
    grid-row: 2/3;
  }

  .App .footer .author{
    grid-column: 1/3;
    grid-row: 1/2;
  }
  
  .App .footer .social-media{
    grid-column: 2/3;
    grid-row: 2/3;
  }
}

